Enable preview-features again